# pipeline

./: .gitignore  .sops.yaml  Cargo.toml  Makefile  README.md  cleanup.sh  deploy.sh  deploy_base.sh  pipeline.service  remote-deploy.sh
config/: example.toml
config/production/: config.toml
crates/app/: Cargo.toml
crates/app/src/: lib.rs  main.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/controller/: Cargo.toml
crates/controller/src/: lib.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs
crates/http/: Cargo.toml
crates/http/src/: lib.rs
crates/model/: Cargo.toml
crates/model/src/: lib.rs
crates/view/: Cargo.toml
crates/view/src/: home.rs  landing_page.rs  lib.rs  not_found.rs  service_page.rs  settings_page.rs
crates/ws/: Cargo.toml
crates/ws/src/: lib.rs
static/: animation.css  custom_htmx.js  home.css  landing_page.css  landing_page.js  settings_page.css  ws.js
