[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
config = { path = "../config" }
controller = { path = "../controller" }
db = { path = "../db" }
model = { path = "../model" }
view = { path = "../view" }
rand = "0.9.2"
tungstenite = "0.28.0"
mio = { version = "0.8", features = ["os-poll", "os-ext"] }
libc = "0.2"
